<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_init"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_civilization"
            android:icon="@drawable/ic_civilizations"
            android:title="@string/menu_civilization" />

        <item
            android:id="@+id/nav_flags"
            android:icon="@drawable/ic_banderas"
            android:title="@string/menu_flags" />

        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_banderas"
            android:title="@string/menu_calculadora" />

        <item
            android:id="@+id/nav_build"
            android:icon="@drawable/ic_otros"
            android:title="@string/menu_build" />

    </group>
</menu>
