<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".ui.init.initFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/home_header"
        android:src="@drawable/cabezas" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cardinal"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/son_of_time"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/home_p1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/son_of_time"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/home_p2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>