<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_init">

    <fragment
        android:id="@+id/nav_civilization"
        android:name="com.example.ageofempires.ui.civilization.CivilizationFragment"
        android:label="@string/menu_civilization"
        tools:layout="@layout/fragment_civilization"/>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.ageofempires.ui.civilization.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_build"
        android:name="com.example.ageofempires.ui.webview.WebViewFragment"
        android:label="@string/menu_build"
        tools:layout="@layout/fragment_webview" />

    <fragment
        android:id="@+id/nav_flags"
        android:name="com.example.ageofempires.ui.flags.FlagsFragment"
        android:label="@string/menu_flags"
        tools:layout="@layout/fragment_flags" />

    <fragment
        android:id="@+id/nav_init"
        android:name="com.example.ageofempires.ui.init.initFragment"
        android:label="Age of Empires"
        tools:layout="@layout/fragment_init" >
    </fragment>

    <fragment
        android:id="@+id/nav_calculadora"
        android:name="com.example.ageofempires.ui.calculadora.CalculadoraFragment"
        android:label="Calculadora"
        tools:layout="@layout/fragment_calculadora" >
    </fragment>



</navigation>