<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.webview.WebViewFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dancing_script_bold"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/text_info"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">


        <Button
            android:id="@+id/btn_age1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/cardinal"
            android:text="@string/btn_enlace1"
            android:textAllCaps="false"
            android:textColor="#6E4100"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_ageMytho"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/cardinal"

            android:text="@string/btn_enlace2"
            android:textAllCaps="false"
            android:textColor="#6E4100"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_age3"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@drawable/botones"
            android:fontFamily="@font/cardinal"

            android:text="@string/btn_enlace3"
            android:textAllCaps="false"
            android:textColor="#6E4100"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>